Fix z-index on nav dropdown

--- a/frontend/src/components/nav/navbar.css
+++ b/frontend/src/components/nav/navbar.css
@@ -15,6 +15,7 @@
   z-index: 9;
   background: white;
   top: 0;
+  z-index: 150;
 }
 
 .NavBar button {
